# nanis

./: .gitignore  LICENSE  README.md  _CLIENT-SES-SETUP.md  implementation-status.md  missing-tables-analysis.md  missing-tables-list.md  remove-rls-policies.sql  rls-day1-minimal.sql  schema-auth-tables.sql
Docs/: README.md  architecture-overview.md  auth-frontend.md  contacts-query-engine.md  contacts-schema-analysis.md  contacts-schema-design.md  contacts-schema-mvp-evaluation.md  contacts-schema-mvp.md  contacts-segment-engine.md  contacts-service-architecture.md  contacts-table-implementation-plan.md  database-overview.md  decision-log.md  deployment-flow.md  feature-gating.md  implementation-complete.md  oauth-google.md  project-overview.md  rls.md  routing.md  signup-flow.md  tasks-index.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py  ses_client.py  supabase_client.py  tracking.py
backend/app/api/v1/: __init__.py  activity.py  campaigns.py  contacts.py  health.py  internal.py  invites.py  onboard.py  router.py  templates.py  track.py
backend/app/services/: __init__.py  campaign_send.py
backend/migrations/: 001_core_tables.sql  002_rls_policies.sql  003_handle_new_user.sql  004_activity_events.sql  005_organization_invites.sql  006_contacts_and_tags.sql  007_templates.sql  008_campaigns.sql  009_storage_buckets.sql  010_email_events.sql  README.md
backend/scripts/: README.md  seed_dev_org.py
database/: README.md  schema-contacts.sql  (+2 more)
frontend/: README.md  (+5 more)
(+113 files in other folders)
