[project]
name = "nanis-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "__pycache__", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["migrations", "scripts"]
